fix(build): gha environment typo

--- a/.github/workflows/supabase-ci.yml
+++ b/.github/workflows/supabase-ci.yml
@@ -33,7 +33,7 @@ jobs:
 
   deploy-migrations:
     runs-on: ubuntu-latest
-    environment: production
+    environment: staging
     steps:
       - uses: supabase/setup-cli@v1
       - run: supabase link --project-ref $PROJECT_ID
