--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "impact-framework-backend",
-  "version": "0.1.0",
+  "name": "impact-framework-client",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "test": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,14 +17,18 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@testing-library/react": "^15.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "jsdom": "^24.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.5.2"
   }
 }
