--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impact-framework-client",
+  "name": "impact-garden",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,14 +12,23 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "next": "14.1.4",
-    "ra-data-json-server": "^4.16.12",
+    "@supabase/supabase-js": "^2.42.7",
+    "@xstate/react": "4.1.1",
+    "lucide-react": "0.376.0",
+    "next": "14.2.3",
+    "ra-data-json-server": "^4.16.16",
     "react": "^18",
     "react-admin": "^4.16.14",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "2.4.1",
+    "react-spinners": "0.13.8",
+    "xstate": "5.12.0",
+    "viem": "2.9.28",
+    "zod": "3.23.4"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
+    "@next/bundle-analyzer": "14.2.3",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-interactions": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
@@ -34,14 +43,22 @@
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.0.1",
+    "daisyui": "4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "eslint-plugin-storybook": "^0.8.0",
     "jsdom": "^24.0.0",
     "postcss": "^8",
+    "prettier": "3.2.5",
     "storybook": "^8.0.9",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vitest": "^1.5.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "next/core-web-vitals",
+      "plugin:storybook/recommended"
+    ]
   }
 }
