--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,13 +12,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.42.7",
     "@xstate/react": "4.1.1",
     "lucide-react": "0.376.0",
     "next": "14.2.3",
-    "ra-data-json-server": "^4.16.16",
     "react": "^18",
-    "react-admin": "^4.16.14",
     "react-dom": "^18",
     "react-hot-toast": "2.4.1",
     "react-spinners": "0.13.8",
@@ -27,13 +24,9 @@
     "zod": "3.23.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "global": "^4.4.0",
-    "ra-input-rich-text": "^4.16.14",
-    "ra-supabase": "^2.2.0",
     "snaplet": "^0.90.0",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.7.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
