--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,21 +12,19 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@farcaster/auth-kit": "0.2.2",
     "@xstate/react": "4.1.1",
     "lucide-react": "0.376.0",
     "next": "14.2.3",
+    "next-auth": "5.0.0-beta.17",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "2.4.1",
     "react-spinners": "0.13.8",
-    "xstate": "5.12.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "2.9.28",
-    "zod": "3.23.4",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "snaplet": "^0.90.0",
-    "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "xstate": "5.12.0",
+    "zod": "3.23.4"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
