--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,27 +9,38 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@graphql-typed-document-node/core": "^3.2.0",
+    "@tanstack/react-query": "^5.37.1",
+    "@urql/core": "^5.0.3",
     "@xstate/react": "4.1.1",
+    "axios": "^1.7.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "gql.tada": "^1.7.5",
+    "graphql": "^16.8.1",
     "lucide-react": "0.376.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "2.4.1",
     "react-spinners": "0.13.8",
-    "xstate": "5.12.0",
-    "viem": "2.9.28",
-    "zod": "3.23.4",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
     "snaplet": "^0.90.0",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "2.9.28",
+    "xstate": "5.12.0",
+    "zod": "3.23.4"
   },
   "devDependencies": {
+    "@0no-co/graphqlsp": "^1.12.3",
     "@chromatic-com/storybook": "^1.3.3",
+    "@graphql-codegen/cli": "5.0.2",
+    "@graphql-codegen/typescript": "4.0.7",
+    "@graphql-codegen/typescript-document-nodes": "4.0.7",
     "@next/bundle-analyzer": "14.2.3",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-interactions": "^8.0.9",
