--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impact-garden",
+  "name": "impact-reef",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@farcaster/auth-kit": "0.2.2",
+    "@farcaster/auth-kit": "0.3.0",
     "@xstate/react": "4.1.1",
     "lucide-react": "0.376.0",
     "next": "14.2.3",
@@ -23,7 +23,7 @@
     "react-spinners": "0.13.8",
     "tailwindcss-animate": "^1.0.7",
     "viem": "2.9.28",
-    "xstate": "5.12.0",
+    "xstate": "5.13.0",
     "zod": "3.23.4"
   },
   "devDependencies": {
