--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,10 +13,11 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@farcaster/auth-kit": "0.3.0",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@million/lint": "1.0.0-rc.13",
     "@tanstack/react-query": "^5.37.1",
     "@urql/core": "^5.0.3",
-    "@farcaster/auth-kit": "0.3.0",
     "@xstate/react": "4.1.1",
     "axios": "^1.7.1",
     "class-variance-authority": "^0.7.0",
@@ -24,6 +25,7 @@
     "gql.tada": "^1.7.5",
     "graphql": "^16.8.1",
     "lucide-react": "0.376.0",
+    "million": "^3.1.6",
     "next": "14.2.3",
     "next-auth": "5.0.0-beta.18",
     "react": "^18.3.1",
