replaced farcaster auth with wallet connect

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -16,11 +16,10 @@
     "@graphql-typed-document-node/core": "^3.2.0",
     "@tanstack/react-query": "^5.37.1",
     "@urql/core": "^5.0.3",
-    "@farcaster/auth-kit": "0.3.0",
     "@xstate/react": "4.1.1",
     "axios": "^1.7.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "connectkit": "^1.8.0",
+    "connectkit-next-siwe": "0.3.0",
     "gql.tada": "^1.7.5",
     "graphql": "^16.8.1",
     "lucide-react": "0.376.0",
@@ -34,6 +33,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "viem": "2.9.28",
+    "wagmi": "^2.9.10",
     "xstate": "5.13.0",
     "zod": "3.23.4"
   },
