added compents for profile view added connect kit t replace farcater

--- a/packages/client/public/manifest.json
+++ b/packages/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Impact Coral Reef",
-  "short_name": "Impact Coral Reef",
+  "name": "Impact Reef",
+  "short_name": "Impact Reef",
   "icons": [
     {
       "src": "/images/android-chrome-192x192.png",
