--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,7 +20,7 @@
     "@xstate/react": "4.1.1",
     "axios": "^1.7.1",
     "connectkit": "^1.8.0",
-    "connectkit-next-siwe": "0.3.0",
+    "ethers": "6.13.1",
     "gql.tada": "^1.7.5",
     "graphql": "^16.8.1",
     "lucide-react": "0.376.0",
