--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ethereum-attestation-service/eas-sdk": "^2.3.0",
     "@graphql-typed-document-node/core": "^3.2.0",
+    "@neynar/nodejs-sdk": "1.37.2",
     "@tanstack/react-query": "^5.37.1",
     "@urql/core": "^5.0.3",
     "@xstate/react": "4.1.1",
