--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,22 +9,18 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@ethereum-attestation-service/eas-sdk": "^2.3.0",
-    "@graphql-typed-document-node/core": "^3.2.0",
     "@neynar/nodejs-sdk": "1.37.2",
     "@tanstack/react-query": "^5.37.1",
     "@urql/core": "^5.0.3",
     "@xstate/react": "4.1.1",
-    "axios": "^1.7.1",
-    "connectkit": "^1.8.0",
+    "axios": "^1.7.2",
+    "connectkit": "^1.8.2",
     "ethers": "6.13.1",
     "gql.tada": "^1.7.5",
-    "graphql": "^16.8.1",
-    "lucide-react": "0.376.0",
     "next": "14.2.3",
     "next-auth": "5.0.0-beta.18",
     "react": "^18.3.1",
@@ -33,20 +29,15 @@
     "react-hot-toast": "2.4.1",
     "react-spinners": "0.13.8",
     "siwe": "2.3.2",
-    "snaplet": "^0.90.0",
-    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "2.17.2",
-    "wagmi": "^2.9.10",
-    "xstate": "5.13.0",
-    "zod": "3.23.4"
+    "viem": "2.17.3",
+    "wagmi": "^2.10.10",
+    "xstate": "5.15.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.12.3",
     "@chromatic-com/storybook": "^1.3.3",
-    "@graphql-codegen/cli": "5.0.2",
-    "@graphql-codegen/typescript": "4.0.7",
-    "@graphql-codegen/typescript-document-nodes": "4.0.7",
     "@next/bundle-analyzer": "14.2.3",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-interactions": "^8.0.9",
@@ -66,13 +57,13 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "eslint-plugin-storybook": "^0.8.0",
-    "jsdom": "^24.0.0",
+    "jsdom": "^24.1.0",
     "postcss": "^8",
     "prettier": "3.2.5",
     "storybook": "^8.0.9",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "vitest": "^1.5.2"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3",
+    "vitest": "^2.0.2"
   },
   "eslintConfig": {
     "extends": [
