--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,22 +7,19 @@
     "build": "next build",
     "test": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@ethereum-attestation-service/eas-sdk": "^2.3.0",
     "@hookform/resolvers": "3.9.0",
-    "@neynar/nodejs-sdk": "1.37.2",
+    "@neynar/nodejs-sdk": "1.37.3",
     "@tanstack/react-query": "^5.37.1",
     "@urql/core": "^5.0.3",
     "@xstate/react": "4.1.1",
-    "axios": "^1.7.2",
     "connectkit": "^1.8.2",
     "ethers": "6.13.1",
     "gql.tada": "^1.7.5",
-    "next": "14.2.3",
+    "next": "14.2.5",
     "next-auth": "5.0.0-beta.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -38,15 +35,7 @@
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.12.3",
-    "@chromatic-com/storybook": "^1.3.3",
     "@next/bundle-analyzer": "14.2.3",
-    "@storybook/addon-essentials": "^8.0.9",
-    "@storybook/addon-interactions": "^8.0.9",
-    "@storybook/addon-links": "^8.0.9",
-    "@storybook/blocks": "^8.0.9",
-    "@storybook/nextjs": "^8.0.9",
-    "@storybook/react": "^8.0.9",
-    "@storybook/test": "^8.0.9",
     "@testing-library/react": "^15.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -56,19 +45,16 @@
     "daisyui": "4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
-    "eslint-plugin-storybook": "^0.8.0",
     "jsdom": "^24.1.0",
     "postcss": "^8",
     "prettier": "3.2.5",
-    "storybook": "^8.0.9",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.5.3",
     "vitest": "^2.0.2"
   },
   "eslintConfig": {
     "extends": [
-      "next/core-web-vitals",
-      "plugin:storybook/recommended"
+      "next/core-web-vitals"
     ]
   }
 }
