updated packages and names in package.json

--- a/packages/eas/package.json
+++ b/packages/eas/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eas schema creator",
+  "name": "impact-reef-schemas",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
