--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impact-reef",
+  "name": "impact-reef-app",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,47 +10,47 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ethereum-attestation-service/eas-sdk": "^2.3.0",
-    "@hookform/resolvers": "3.9.0",
-    "@neynar/nodejs-sdk": "1.37.3",
-    "@tanstack/react-query": "^5.37.1",
-    "@urql/core": "^5.0.3",
-    "@xstate/react": "4.1.1",
+    "@ethereum-attestation-service/eas-sdk": "^2.5.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@neynar/nodejs-sdk": "^1.39.0",
+    "@tanstack/react-query": "^5.51.15",
+    "@urql/core": "^5.0.4",
+    "@xstate/react": "^4.1.1",
     "connectkit": "^1.8.2",
-    "ethers": "6.13.1",
-    "gql.tada": "^1.7.5",
-    "next": "14.2.5",
-    "next-auth": "5.0.0-beta.18",
+    "ethers": "^6.13.2",
+    "gql.tada": "^1.8.2",
+    "next": "^14.2.5",
+    "next-auth": "5.0.0-beta.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "7.52.1",
-    "react-hot-toast": "2.4.1",
-    "react-spinners": "0.13.8",
-    "siwe": "2.3.2",
+    "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
+    "react-spinners": "^0.14.1",
+    "siwe": "^2.3.2",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "2.17.3",
-    "wagmi": "^2.10.10",
-    "xstate": "5.15.0",
-    "zod": "3.23.8"
+    "viem": "^2.18.2",
+    "wagmi": "^2.12.1",
+    "xstate": "^5.16.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@0no-co/graphqlsp": "^1.12.3",
-    "@next/bundle-analyzer": "14.2.3",
-    "@testing-library/react": "^15.0.4",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.0.1",
-    "daisyui": "4.10.2",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "jsdom": "^24.1.0",
-    "postcss": "^8",
-    "prettier": "3.2.5",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
-    "vitest": "^2.0.2"
+    "@0no-co/graphqlsp": "^1.12.12",
+    "@next/bundle-analyzer": "^14.2.5",
+    "@testing-library/react": "^16.0.0",
+    "@types/node": "^22.0.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.10",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
+    "jsdom": "^24.1.1",
+    "postcss": "^8.4.40",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.4"
   },
   "eslintConfig": {
     "extends": [
