--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,12 +15,14 @@
     "@neynar/nodejs-sdk": "^1.39.0",
     "@tanstack/react-query": "^5.51.15",
     "@urql/core": "^5.0.4",
+    "@web3modal/siwe": "^5.0.10",
+    "@web3modal/wagmi": "^5.0.10",
     "@xstate/react": "^4.1.1",
     "connectkit": "^1.8.2",
     "ethers": "^6.13.2",
     "gql.tada": "^1.8.2",
     "next": "^14.2.5",
-    "next-auth": "5.0.0-beta.20",
+    "next-auth": "4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
