--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "test": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen:api": "pnpm orval --config ./orval.config.ts"
   },
   "dependencies": {
     "@ethereum-attestation-service/eas-sdk": "^2.5.0",
@@ -18,6 +19,7 @@
     "@web3modal/siwe": "^5.0.10",
     "@web3modal/wagmi": "^5.0.10",
     "@xstate/react": "^4.1.1",
+    "axios": "^1.7.2",
     "connectkit": "^1.8.2",
     "ethers": "^6.13.2",
     "gql.tada": "^1.8.2",
@@ -48,6 +50,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
     "jsdom": "^24.1.1",
+    "orval": "^6.31.0",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.7",
