--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -47,7 +47,6 @@
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.10",
-    "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
     "jsdom": "^24.1.1",
     "orval": "^6.31.0",
@@ -55,6 +54,7 @@
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.0",
     "vitest": "^2.0.4"
   },
   "eslintConfig": {
