--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "5.2.1",
     "react-spinners": "^0.14.1",
     "siwe": "^2.3.2",
     "tailwindcss-animate": "^1.0.7",
