--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,7 +8,7 @@
     "test": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen:api": "pnpm orval --config ./orval.config.ts"
+    "codegen:api": "orval"
   },
   "dependencies": {
     "@ethereum-attestation-service/eas-sdk": "^2.5.0",
@@ -49,7 +49,7 @@
     "daisyui": "^4.12.10",
     "eslint-config-next": "^14.2.5",
     "jsdom": "^24.1.1",
-    "orval": "^6.31.0",
+    "orval": "^7.0.1",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.7",
