feat(gql.tada): updates gql.tada schemas to support both EAS and OSO schemas

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -17,9 +17,19 @@
     },
     "plugins": [
       {
-        "name": "@0no-co/graphqlsp",
-        "schema": "https://easscan.org/graphql",
-        "tadaOutputLocation": "src/types/graphql-env.d.ts"
+        "name": "gql.tada/ts-plugin",
+        "schemas": [
+          {
+            "name": "OSO",
+            "schema": "./oso-schema.graphql",
+            "tadaOutputLocation": "./src/types/oso-env.d.ts"
+          },
+          {
+            "name": "EAS",
+            "schema": "https://easscan.org/graphql",
+            "tadaOutputLocation": "./src/types/eas-env.d.ts"
+          }
+        ]
       },
       {
         "name": "next"
