--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impact-reef-app",
+  "name": "impact-reef-client",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -13,12 +13,10 @@
   "dependencies": {
     "@ethereum-attestation-service/eas-sdk": "^2.5.0",
     "@hookform/resolvers": "^3.9.0",
-    "@neynar/nodejs-sdk": "^1.39.0",
     "@tanstack/react-query": "^5.51.15",
     "@urql/core": "^5.0.4",
     "@web3modal/siwe": "^5.0.10",
     "@web3modal/wagmi": "^5.0.10",
-    "@xstate/react": "^4.1.1",
     "axios": "^1.7.2",
     "ethers": "^6.13.2",
     "gql.tada": "^1.8.2",
@@ -34,7 +32,6 @@
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.18.2",
     "wagmi": "^2.12.1",
-    "xstate": "^5.16.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
