--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,12 +15,12 @@
     "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.51.15",
     "@urql/core": "^5.0.4",
-    "@web3modal/siwe": "^5.0.10",
-    "@web3modal/wagmi": "^5.0.10",
+    "@web3modal/siwe": "^5.1.8",
+    "@web3modal/wagmi": "^5.1.8",
     "axios": "^1.7.2",
     "ethers": "^6.13.2",
     "gql.tada": "^1.8.2",
-    "next": "^14.2.5",
+    "next": "^14.2.11",
     "next-auth": "4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -49,6 +49,7 @@
     "orval": "^6.31.0",
     "postcss": "^8.4.40",
     "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.6",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0",
