--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,7 +17,7 @@
     "@urql/core": "^5.0.4",
     "@web3modal/siwe": "^5.1.8",
     "@web3modal/wagmi": "^5.1.8",
-    "axios": "^1.7.2",
+    "clsx": "2.1.1",
     "ethers": "^6.13.2",
     "gql.tada": "^1.8.6",
     "next": "^14.2.11",
@@ -29,7 +29,7 @@
     "react-icons": "5.2.1",
     "react-spinners": "^0.14.1",
     "siwe": "^2.3.2",
-    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "10.0.3",
     "viem": "^2.18.2",
     "wagmi": "^2.12.1",
     "zod": "^3.23.8"
