--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
+    "downlevelIteration": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -16,6 +17,9 @@
       "@/*": ["./src/*"]
     },
     "plugins": [
+      {
+        "name": "next"
+      },
       {
         "name": "gql.tada/ts-plugin",
         "schemas": [
@@ -30,9 +34,6 @@
             "tadaOutputLocation": "./src/types/eas-env.d.ts"
           }
         ]
-      },
-      {
-        "name": "next"
       }
     ]
   },
