--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
+    "downlevelIteration": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -23,6 +24,21 @@
       },
       {
         "name": "next"
+      },
+      {
+        "name": "gql.tada/ts-plugin",
+        "schemas": [
+          {
+            "name": "OSO",
+            "schema": "./oso-schema.graphql",
+            "tadaOutputLocation": "./src/types/oso-env.d.ts"
+          },
+          {
+            "name": "EAS",
+            "schema": "https://easscan.org/graphql",
+            "tadaOutputLocation": "./src/types/eas-env.d.ts"
+          }
+        ]
       }
     ]
   },
