--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -18,11 +18,6 @@
     },
     "plugins": [
       {
-        "name": "@0no-co/graphqlsp",
-        "schema": "https://easscan.org/graphql",
-        "tadaOutputLocation": "src/types/graphql-env.d.ts"
-      },
-      {
         "name": "next"
       },
       {
@@ -31,7 +26,7 @@
           {
             "name": "OSO",
             "schema": "./oso-schema.graphql",
-            "tadaOutputLocation": "./src/types/oso-env.d.ts"
+            "tadaOutputLocation": "./src/types/oso-env.d.ts",
           },
           {
             "name": "EAS",
