Op season 5 QA (#69)
* Develop (#62)

* added images and icons

* added prorile pages and layout
added projects pages

* updated fonts adding sora

* removed react admin code

* updated navbar

* removed constants
updated action name to deprecate
removed admin page

* Feat/project components (#45)

* added icons and images
removed unused assets
updated favicon and logo icon

* removed supabase not needed

* added hooks for projects and auth

* added components for views

* added next auth for handling user sessions

* updated name and import for pages
added not found for project

* added mock data util
removed uneeded styles function

* added xstate machines for project

* added manifest

* added next auth
removed uneeded library

* updated daisy ui theme with light theme only

* added toaster and footer to root layout

* started mock static pages for projects

* work for components ready for PR

* upated compare ready for PR

* removed screen height

* project build fix

* fixed sanitization error

* Feat/project actions (#44)

* feat(projects): fetch project data

* fixed build issue ready to build

---------

Co-authored-by: Afo <obaone01@gmail.com>

* removed storybook components

* replaced farcaster auth with wallet connect

* EAS schema schemas and metrics schemas (#59)

* feat(uploader): attestation uploader

* feat(uploader): upload metric schemas

* feat(attest): uploaded metrics schema

* feat(schema): project metrics attestation schema

* feat(endorsement): uploaded endorsement schema

* feat(eval): evaluation attestation schema

---------

Co-authored-by: Afolabi <obaone01@gmail.com>

* added compents for profile view
added connect kit t replace farcater

* Building

* late night work added machines for projects
added pnpm workspce
removed uneeded components and views

* latest work

* app building

* late night work

* some more work really coming

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -18,21 +18,6 @@
     },
     "plugins": [
       {
-        "name": "gql.tada/ts-plugin",
-        "schemas": [
-          {
-            "name": "OSO",
-            "schema": "./oso-schema.graphql",
-            "tadaOutputLocation": "./src/types/oso-env.d.ts"
-          },
-          {
-            "name": "EAS",
-            "schema": "https://easscan.org/graphql",
-            "tadaOutputLocation": "./src/types/eas-env.d.ts"
-          }
-        ]
-      },
-      {
         "name": "next"
       },
       {
@@ -41,7 +26,7 @@
           {
             "name": "OSO",
             "schema": "./oso-schema.graphql",
-            "tadaOutputLocation": "./src/types/oso-env.d.ts"
+            "tadaOutputLocation": "./src/types/oso-env.d.ts",
           },
           {
             "name": "EAS",
